Correciones de mediaquery

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                 </div>
                 <div class="informacion2">
                     <img src="Images/nav/circle-user-solid.svg" alt="Icono perfil">
-                    <a href="/Assets/pages/login.html"><p><b>Ingresar</b></p></a>
+                    <a href="./Assets/pages/login.html"><p><b>Ingresar</b></p></a>
                 </div>
-                <div class="informacion2">
+                <div class="informacion2" id="shopCart">
                     <img src="Images/nav/carrito.png" alt="Carrito de compras">
                     <p><b>Carro de Compras</b></p>
                 </div>
             </div>
-            <label for="toggle-menu"><img src="/Images/nav/bars-solid.svg" alt="Icono Menu" id="iconMenu"></label>
+            <label for="toggle-menu"><img src="./Images/nav/bars-solid.svg"  alt="Icono Menu" id="iconMenu"></label>
             <input type="checkbox" id="toggle-menu">
             <ul id="menu">
                 <li><a href="index.html" class="btnesMenu">Inicio</a></li>
